--- a/content/site.css
+++ b/content/site.css
@@ -720,4 +720,4 @@ table.dataDetails tbody tr {
   border-bottom: 1px dotted lightgray;
   background-color: white;
 }
-/*# sourceMappingURL=Site.css.map */
+/*# sourceMappingURL=site.css.map */
